# aws-lambda-quizzical

./: .gitignore  Cargo.toml  Makefile  README.md  authorizer.py  package-lock.json
.circleci/: config.yml
quizzical-categories/: .gitignore  Cargo.toml  Makefile
quizzical-categories/src/: main.rs
src/: apigateway.rs  categories.rs  categories_lambda.rs  connection.rs  models.rs  new_question_lambda.rs  questions_lambda.rs  repositories.rs  responses.rs  update_category_active_lambda.rs
