[package]
name = "quizzical-categories"
version = "0.1.0"
authors = ["Waqqas Sheikh <waqqas.abdulkareem@gmail.com>"]

[dependencies]
lambda_runtime = "0.1.0"
log = "0.4.6"
simple_logger = "1.0.1"
serde = "1.0.75"
serde_derive = "1.0.75"
serde_json = "1.0.26"
postgres = "0.15"
http = "0.1"

[[bin]]
name = "categories"
path = "src/categories_lambda.rs"

[[bin]]
name = "questions"
path = "src/questions_lambda.rs"

[[bin]]
name = "new_question"
path = "src/new_question_lambda.rs"